--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -221,3 +221,5 @@ mark_yihuopingzhang: 'https://seer2-resource.yuuinih.com/png/markImage/3269.png'
 mark_lache: 'https://seer2-resource.yuuinih.com/png/markImage/3270.png'
 mark_anhunqu: 'https://seer2-resource.yuuinih.com/png/markImage/3271.png'
 mark_shuanghunxuanlv: 'https://seer2-resource.yuuinih.com/png/markImage/3272.png'
+mark_shunliu: 'https://seer2-resource.yuuinih.com/png/markImage/3238.png'
+mark_niliu: 'https://seer2-resource.yuuinih.com/png/markImage/3239.png'
