--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -728,7 +728,6 @@ skill_shenguangliechong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_00
 skill_shenguangyuandan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_001.mp3'
 skill_guangsuliechong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_002.mp3'
 skill_guangsufeidan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_003.mp3'
-# 琳娜/卡特琳娜技能音效
 skill_hanshuangchuanliu: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
 skill_bingdiangongji: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_001.mp3'
 skill_xishuichangliu: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
@@ -743,3 +742,18 @@ skill_hanshuangpingzhang: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_0
 skill_qiannianbingbi: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
 skill_tuanliubuxi: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_001.mp3'
 skill_shuanghunxuanlv: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_003.mp3'
+skill_shuiliu: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_003.mp3'
+skill_zhulangzhuiji: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_003.mp3'
+skill_nixingfanji: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_shuiguangzhaoyue: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
+skill_yueguang: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_002.mp3'
+skill_shunshitupo: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_001.mp3'
+skill_nishuixingzhou: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
+skill_shuiguangsiqi: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_002.mp3'
+skill_anyong: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_001.mp3'
+skill_penyong: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_chaoxizanmeishi: 'https://seer2-resource.yuuinih.com/sound/skill/11278.mp3'
+skill_liudong: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_003.mp3'
+skill_qusan: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
+skill_feiliuzhixia: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_002.mp3'
+skill_niliuershang: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
