--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -284,3 +284,9 @@
   tags: [ability]
   effect:
     - effect_ability_gugao_prevent_rage_when_opponent_use_skill
+- id: mark_ability_liuzhuan
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_spa_skill_add_niliu_1
+    - effect_ability_atk_skill_add_shunliu_1
