--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -9118,3 +9118,199 @@
   target: opponent
   effect:
     - effect_heal_1_16_max_hp_per_stack_if_has_niliu
+- id: skill_fengchidianche
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 70
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  priority: 2
+  tags: []
+  effect: []
+- id: skill_shanguangji
+  element: Electric
+  category: Special
+  target: opponent
+  power: 60
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  priority: 1
+  tags: []
+  effect: []
+- id: skill_chongdian
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_dianxizengqiang
+- id: skill_jingleiqie
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_hp_below_half
+- id: skill_leibaotian
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_set_field_leibaotian
+- id: skill_baiguangren
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_30_percent
+- id: skill_leiji
+  element: Electric
+  category: Status
+  target: opponent
+  power: 0
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_mabi
+- id: skill_guangmangwanzhang
+  element: Electric
+  category: Special
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_clear_self_negative_stage
+- id: skill_dianshanguang
+  element: Electric
+  category: Status
+  target: opponent
+  power: 0
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage
+    - effect_skill_add_mark_opponent_mingzhongxiajiang_15
+- id: skill_jidiantianchong
+  element: Electric
+  category: Special
+  target: opponent
+  power: 120
+  rage: 25
+  accuracy: 95
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_mabi_15_percent
+- id: skill_shunleitianxian
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 150
+  rage: 45
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_mabi_20_percent
+- id: skill_modiandian
+  element: Electric
+  category: Special
+  target: opponent
+  power: 140
+  rage: 40
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_self_40_rage_if_opponent_mabi
+- id: skill_leishentianmingshan
+  element: Electric
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_4x_10_percent
+- id: skill_leishenjuexing
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 50
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage
+    - effect_skill_raise_spe_1_stage
+    - effect_skill_add_mark_leishenjuexing
+- id: skill_shandiandouqi
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_def_1_stage
+    - effect_skill_raise_spd_1_stage
+- id: skill_jiguangren
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 130
+  rage: 35
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_opponent_clear_stage
