--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -1273,7 +1273,7 @@
             - type: multiply
               arg: 30
       percent: 0
-# 1/16恢复：回合结束时恢复自身最大体力的1/16
+# 1/16恢复: 回合结束时恢复自身最大体力的1/16
 - id: effect_mark_heal_self_1_16_turnEnd
   trigger: TurnEnd
   condition:
@@ -1293,7 +1293,7 @@
                 arg: maxHp
             - type: divide
               arg: 16
-# 爱的名义：使自身所有技能必中
+# 爱的名义: 使自身所有技能必中
 - id: effect_mark_skill_sure_hit
   trigger: BeforeUseSkillCheck
   priority: 0
@@ -1303,7 +1303,7 @@
     type: setSureHit
     target: useSkillContext
     priority: 1
-# 誓言之约：结束时恢复自身所有体力
+# 誓言之约: 结束时恢复自身所有体力
 - id: effect_mark_heal_all_hp_on_expire
   trigger: OnMarkDurationEnd
   priority: 0
@@ -1319,7 +1319,7 @@
             arg:
               type: base
               arg: maxHp
-# 心灵制约：每次获得怒气不超过y点
+# 心灵制约: 每次获得怒气不超过y点
 - id: effect_mark_limit_rage_gain
   trigger: BeforeRageGain
   priority: 0
@@ -1349,7 +1349,7 @@
                     arg:
                       type: base
                       arg: stack
-# 静养生息：回合结束时增加10点怒气
+# 静养生息: 回合结束时增加10点怒气
 - id: effect_mark_add_rage_10_turnEnd
   trigger: TurnEnd
   condition:
@@ -1359,7 +1359,7 @@
     type: addRage
     target: self
     value: 10
-# 反弹印记：反弹受到伤害的25%
+# 反弹印记: 反弹受到伤害的25%
 - id: effect_mark_fantan_reflect_damage
   trigger: OnDamage
   condition:
@@ -1377,7 +1377,7 @@
             arg: damageResult
           - type: multiply
             arg: 0.25
-# 准备动作：下一次攻击技能造成伤害增加50%且必中
+# 准备动作: 下一次攻击技能造成伤害增加50%且必中
 - id: effect_mark_next_attack_damage_increase_50_percent_sure_hit
   trigger: AfterUseSkillCheck
   priority: 0
@@ -1402,7 +1402,7 @@
       target: useSkillContext
       priority: 1
   consumesStacks: 1
-# 灵巧：闪避特攻，受到物攻伤害2倍
+# 灵巧: 闪避特攻，受到物攻伤害2倍
 - id: effect_mark_evasion_special_attacks
   trigger: BeforeUseSkillCheck
   priority: 0
@@ -1445,7 +1445,7 @@
       base: damageContext
     delta: 0
     percent: 100
-# 麦麦金针：造成特攻伤害降低20%
+# 麦麦金针: 造成特攻伤害降低20%
 - id: effect_mark_reduce_spa_damage_20_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1467,7 +1467,7 @@
     target: damageContext
     percent: -20
     delta: 0
-# 金针外衣：受到物攻时反弹30点伤害
+# 金针外衣: 受到物攻时反弹30点伤害
 - id: effect_mark_reflect_physical_damage_30
   trigger: OnDamage
   condition:
@@ -1488,7 +1488,7 @@
     type: dealDamage
     target: opponent
     value: 30
-# 冲撞刺针：造成物攻伤害降低25%
+# 冲撞刺针: 造成物攻伤害降低25%
 - id: effect_mark_reduce_atk_damage_25_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1510,7 +1510,7 @@
     target: damageContext
     percent: -25
     delta: 0
-# 麦迪金针：受到伤害增加75%
+# 麦迪金针: 受到伤害增加75%
 - id: effect_mark_increase_damage_taken_75_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1521,7 +1521,7 @@
     target: damageContext
     percent: 75
     delta: 0
-# 金针粉末：造成伤害降低50%
+# 金针粉末: 造成伤害降低50%
 - id: effect_mark_reduce_damage_50_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1534,7 +1534,7 @@
     delta: 0
 # 虚空体质相关效果
 
-# 金针恢复：每回合恢复50点体力
+# 金针恢复: 每回合恢复50点体力
 - id: effect_mark_heal_self_50_turn_end
   trigger: TurnEnd
   priority: 0
@@ -1544,7 +1544,7 @@
     value: 50
   condition:
     type: petIsActive
-# 替换上场标记：使用技能后自动移除
+# 替换上场标记: 使用技能后自动移除
 - id: effect_mark_remove_after_use_skill
   trigger: OnHit
   priority: 0
@@ -1570,7 +1570,7 @@
           arg: stack
         - type: clampMax
           arg: 100
-# 虚空体质：成功闪避则消耗所有虚空体质并使自身获得虚空感应
+# 虚空体质: 成功闪避则消耗所有虚空体质并使自身获得虚空感应
 - id: effect_mark_xukongtizhi_consume_on_evasion
   trigger: OnMiss
   priority: 0
@@ -1589,7 +1589,7 @@
     - type: destroyMark
       target: mark
 
-# 伊特领域：提高自身队伍10%暴击率
+# 伊特领域: 提高自身队伍10%暴击率
 - id: effect_mark_increase_self_crit_rate
   trigger: OnMarkCreated
   priority: 0
@@ -1600,7 +1600,7 @@
     modifierType: delta
     value: 10
 
-# 气流涌动：非必杀的攻击技能怒气消耗2倍 伤害2倍
+# 气流涌动: 非必杀的攻击技能怒气消耗2倍 伤害2倍
 - id: effect_mark_double_rage_cost_double_damage_non_climax
   trigger: OnMarkCreated
   priority: 0
@@ -1648,7 +1648,7 @@
       modifierType: percent
       value: 100
 
-# 气流涌动：每次使用非必杀非状态技能结束时消耗一层
+# 气流涌动: 每次使用非必杀非状态技能结束时消耗一层
 - id: effect_mark_consume_stack_on_skill_use
   trigger: SkillUseEnd
   priority: 0
@@ -1678,7 +1678,7 @@
           type: notSame
           value: Status
 
-# 风之领域：增加自身本系技能伤害10%
+# 风之领域: 增加自身本系技能伤害10%
 - id: effect_mark_increase_self_element_damage_10_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1707,7 +1707,7 @@
     percent: 10
     delta: 0
 
-# 风暴领域/电磁领域：增加自身本系技能伤害20%
+# 风暴领域/电磁领域: 增加自身本系技能伤害20%
 - id: effect_mark_increase_self_element_damage_20_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1736,7 +1736,7 @@
     percent: 20
     delta: 0
 
-# 电荷：每个暴击率增加20%
+# 电荷: 每个暴击率增加20%
 - id: effect_mark_increase_crit_rate_20_percent_per_stack
   trigger: OnMarkCreated
   priority: 0
@@ -1758,7 +1758,7 @@
               configId: crit_rate_increase_per_stack
               value: 20
 
-# 电之领域：使自身暴击率和闪避率增加10%
+# 电之领域: 使自身暴击率和闪避率增加10%
 - id: effect_mark_increase_crit_rate_10_percent
   trigger: OnMarkCreated
   priority: 0
@@ -1779,7 +1779,7 @@
     modifierType: delta
     value: 10
 
-# 冰之领域：受到伤害降低10% 造成伤害增加10%
+# 冰之领域: 受到伤害降低10% 造成伤害增加10%
 - id: effect_mark_reduce_damage_taken_10_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1802,7 +1802,7 @@
     percent: 10
     delta: 0
 
-# 冰霜领域：受到伤害降低20% 造成伤害增加20%
+# 冰霜领域: 受到伤害降低20% 造成伤害增加20%
 - id: effect_mark_reduce_damage_taken_20_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1876,7 +1876,7 @@
       type: entity:baseMark
       value: mark_mabi
 
-# 冰凝之气：受到伤害增加50%，如果冰冻则效果翻倍（100%）
+# 冰凝之气: 受到伤害增加50%，如果冰冻则效果翻倍（100%）
 - id: effect_increase_damage_taken_once_50_percent_double_effect_if_frozen
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1914,7 +1914,7 @@
       delta: 0
   consumesStacks: 1
 
-# 冰霜之星：造成伤害时减少等于层数的伤害
+# 冰霜之星: 造成伤害时减少等于层数的伤害
 - id: effect_mark_reduce_deal_damage_once_per_stack
   trigger: OnBeforeCalculateDamage
   condition:
@@ -1938,7 +1938,7 @@
     - type: destroyMark
       target: mark
 
-# 伤害阻挡：当伤害值低于等于60时，把实际的伤害值置0
+# 伤害阻挡: 当伤害值低于等于60时，把实际的伤害值置0
 - id: effect_block_damage_under_60
   trigger: OnDamage
   condition:
@@ -1960,7 +1960,7 @@
     type: preventDamage
     target: damageContext
 
-# 暗影之光：威力低于100的攻击技能威力变为100
+# 暗影之光: 威力低于100的攻击技能威力变为100
 - id: effect_mark_anyingzhiguang_power_min_100
   trigger: OnMarkCreated
   priority: 0
@@ -1988,7 +1988,7 @@
     modifierType: override
     value: 100
 
-# 暗影之光：每次使用攻击技能命中时消耗一层
+# 暗影之光: 每次使用攻击技能命中时消耗一层
 - id: effect_mark_anyingzhiguang_consume_stack_on_skill_use
   trigger: OnHit
   priority: 0
@@ -2009,7 +2009,7 @@
   apply:
     type: TODO
 
-# 光辉之影：为所有技能添加优先度-1的modifier
+# 光辉之影: 为所有技能添加优先度-1的modifier
 - id: effect_mark_priority_reduce_1
   trigger: OnMarkCreated
   priority: 0
@@ -2069,7 +2069,7 @@
     percent: 40
     delta: 0
 
-# 恐惧之念：当层数达到3层时，消耗所有恐惧之念并给自己附加恐惧
+# 恐惧之念: 当层数达到3层时，消耗所有恐惧之念并给自己附加恐惧
 - id: effect_mark_fear_consume_stacks_at_3
   trigger: OnStack
   priority: 0
@@ -2115,7 +2115,7 @@
               arg:
                 type: base
                 arg: stack
-# 后空翻：闪避物理攻击
+# 后空翻: 闪避物理攻击
 - id: effect_mark_evade_physical_attacks
   trigger: BeforeUseSkillCheck
   priority: 0
@@ -2137,7 +2137,7 @@
     target: useSkillContext
     priority: -1
 
-# 后空翻： 受到的特殊伤害翻倍
+# 后空翻:  受到的特殊伤害翻倍
 - id: effect_mark_double_special_damage_taken
   trigger: OnBeforeCalculateDamage
   condition:
@@ -2178,7 +2178,7 @@
           - type: selectAttribute$
             arg: stack
 
-# 音波：当叠层后层数大于100层时，消耗100层印记并对自身造成100点伤害
+# 音波: 当叠层后层数大于100层时，消耗100层印记并对自身造成100点伤害
 - id: effect_mark_explode_on_stack_over_100
   trigger: OnStack
   priority: 0
@@ -2210,7 +2210,7 @@
         configId: yinbo_consume_stacks_value
         value: 100
 
-# 噪音：下一次使用技能的命中率减少该印记的层数
+# 噪音: 下一次使用技能的命中率减少该印记的层数
 - id: effect_mark_reduce_accuracy_next_skill_with_stack
   trigger: BeforeUseSkillCheck
   priority: 0
@@ -2650,7 +2650,7 @@
     target: useSkillContext
     value: 2
 
-# 蓄力冲击：下一次造成伤害增加50%
+# 蓄力冲击: 下一次造成伤害增加50%
 - id: effect_mark_xulichongji_add_50_percent_damage
   trigger: OnBeforeCalculateDamage
   priority: 0
@@ -2663,7 +2663,7 @@
     percent: 50
     delta: 0
 
-# 分身术：减少30%受到的伤害
+# 分身术: 减少30%受到的伤害
 - id: effect_mark_reduce_damage_30_percent
   trigger: OnBeforeCalculateDamage
   condition:
@@ -2675,7 +2675,7 @@
     percent: -30
     delta: 0
 
-# 接力：使得换场后的下一只精灵获得25层伤害增加
+# 接力: 使得换场后的下一只精灵获得25层伤害增加
 - id: effect_mark_add_damage_increase_25_on_switch_in
   trigger: OnSwitchOut
   priority: 0
@@ -2729,7 +2729,7 @@
         - type: multiply
           arg: 25
 
-# 泰坦之护：受到伤害不超过自身最大体力的1/2
+# 泰坦之护: 受到伤害不超过自身最大体力的1/2
 - id: effect_mark_damage_cap_half_max_hp
   trigger: OnBeforeCalculateDamage
   condition:
@@ -2751,7 +2751,7 @@
           - type: divide
             arg: 2
 
-# 花粉弥漫：每层受到伤害减少15%
+# 花粉弥漫: 每层受到伤害减少15%
 - id: effect_mark_reduce_damage_15_percent_per_stack
   trigger: OnBeforeCalculateDamage
   condition:
@@ -2776,7 +2776,7 @@
               value: -15
     delta: 0
 
-# 花粉弥漫：回合结束时层数+1
+# 花粉弥漫: 回合结束时层数+1
 - id: effect_mark_add_stack_on_turn_end
   trigger: TurnEnd
   priority: 0
@@ -2786,7 +2786,7 @@
     value: 1
   condition:
     type: petIsActive
-# 龙鳞甲：反弹特攻伤害50%
+# 龙鳞甲: 反弹特攻伤害50%
 - id: effect_mark_longlinjia_reflect_damage_50_percent
   trigger: OnDamage
   condition:
@@ -2836,7 +2836,7 @@
       delta: 0
     - type: destroyMark
       target: mark
-# 黑暗物质：每层降低5点命中率
+# 黑暗物质: 每层降低5点命中率
 - id: effect_mark_reduce_accuracy_5_per_stack
   trigger: OnMarkCreated
   priority: 0
@@ -2856,7 +2856,7 @@
             type: raw:number
             configId: reduce_accuracy_per_stack
             value: -5
-# 影缝：当成功闪避且环境为夜幕时，使自身获得50点回复3回合
+# 影缝: 当成功闪避且环境为夜幕时，使自身获得50点回复3回合
 - id: effect_mark_yingfeng_heal_50_on_evasion_in_yemu
   trigger: OnMiss
   priority: 0
@@ -2899,7 +2899,7 @@
     conditions:
       - type: opponentUseSkill
       - type: selfBeSkillTarget
-# 不谐暗光：受到的光属性伤害减半
+# 不谐暗光: 受到的光属性伤害减半
 - id: effect_mark_buxieanguang_reduce_light_damage_half
   trigger: OnBeforeCalculateDamage
   priority: 0
@@ -2921,7 +2921,7 @@
         evaluator:
           type: same
           value: Light
-# 闪电烙印：如果当前使用的技能为闪电烙印，消耗自身使自身获得麻痹
+# 闪电烙印: 如果当前使用的技能为闪电烙印，消耗自身使自身获得麻痹
 - id: effect_mark_shandianluoyin_paralyze
   trigger: OnHit
   priority: 0
@@ -2948,7 +2948,7 @@
         evaluator:
           type: same
           value: skill_shandianluoyin
-# 蓄电：使自身的电系技能威力提升70%
+# 蓄电: 使自身的电系技能威力提升70%
 - id: effect_mark_amplify_electric_skill_70
   trigger: OnMarkCreated
   priority: 0
@@ -2967,7 +2967,7 @@
     attribute: power
     modifierType: percent
     value: 70
-# 精神错乱：自身承受25%的自损伤害
+# 精神错乱: 自身承受25%的自损伤害
 - id: effect_mark_self_damage_25_percent
   trigger: OnDamage
   condition:
@@ -3009,7 +3009,7 @@
           - type: multiply
             arg: 0.25
 
-# 真实幻想：防止幻想被消耗
+# 真实幻想: 防止幻想被消耗
 - id: effect_mark_zhenshihuanxiang_prevent_consume
   trigger: OnBeforeConsumeStack
   priority: 100 # 高优先级确保在其他效果之前执行
@@ -3032,7 +3032,7 @@
     type: disableContext
     target: consumeStackContext
 
-# 会心：下一次使用非属性类技能必定暴击
+# 会心: 下一次使用非属性类技能必定暴击
 - id: effect_mark_next_non_status_skill_sure_crit
   trigger: AfterUseSkillCheck
   priority: 0
@@ -3058,7 +3058,7 @@
       target: useSkillContext
       priority: 1
 
-# 晚安：每回合结束时恢复40点体力
+# 晚安: 每回合结束时恢复40点体力
 - id: effect_mark_heal_40_per_turn
   trigger: TurnEnd
   priority: 0
@@ -3069,7 +3069,7 @@
   condition:
     type: petIsActive
 
-# 晚安：受到攻击时，消耗自身并使自身获得会心
+# 晚安: 受到攻击时，消耗自身并使自身获得会心
 - id: effect_mark_add_crit_on_damage
   trigger: PostDamage
   priority: 0
@@ -3086,7 +3086,7 @@
     conditions:
       - type: selfBeDamaged
 
-# 招财：造成的伤害提升25%
+# 招财: 造成的伤害提升25%
 - id: effect_mark_increase_damage_dealt_25_percent
   trigger: OnBeforeCalculateDamage
   priority: 0
@@ -3098,7 +3098,7 @@
   condition:
     type: selfUseSkill
 
-# 进宝：受到的伤害减少25%
+# 进宝: 受到的伤害减少25%
 - id: effect_mark_reduce_damage_taken_25_percent
   trigger: OnBeforeCalculateDamage
   priority: 0
@@ -3110,7 +3110,7 @@
   condition:
     type: selfBeDamaged
 
-# 迅捷：为所有技能添加先制+1的modifier
+# 迅捷: 为所有技能添加先制+1的modifier
 - id: effect_mark_priority_add_1
   trigger: OnMarkCreated
   priority: 0
@@ -3121,7 +3121,7 @@
     attribute: priority
     modifierType: delta
     value: 1
-# 强攻：每层添加物攻值35点
+# 强攻: 每层添加物攻值35点
 - id: effect_mark_add_atk_stack_x35
   trigger: OnMarkCreated
   priority: 0
@@ -3138,7 +3138,7 @@
           arg: stack
         - type: multiply
           arg: 35
-# 羽刃反弹：反弹受到伤害的1/3
+# 羽刃反弹: 反弹受到伤害的1/3
 - id: effect_mark_fantan_reflect_damage_1_3
   trigger: OnDamage
   condition:
@@ -3367,7 +3367,7 @@
               arg: stack
           - type: multiply
             arg: 10
-# 光武神通/光武灵通：累积受到的伤害的50%并转化为层数
+# 光武神通/光武灵通: 累积受到的伤害的50%并转化为层数
 - id: effect_mark_stack_mark_with_damage
   trigger: OnDamage
   condition:
@@ -3598,3 +3598,36 @@
             arg: stack
           - type: multiply
             arg: -25
+# 电系增强: 使自身的下一个电系技能威力翻倍
+- id: effect_mark_amplify_next_electric_skill
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    - type: amplifyPower
+      target: useSkillContext
+      value: 2
+    - type: destroyMark
+      target: mark
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: useSkillContext
+          chain:
+            - type: select
+              arg: element
+        evaluator:
+          type: same
+          value: Electric
+# 雷神觉醒: 回合结束时增加35点怒气
+- id: effect_mark_add_rage_35_turnEnd
+  trigger: TurnEnd
+  condition:
+    type: petIsActive
+  priority: 0
+  apply:
+    type: addRage
+    target: self
+    value: 35
