--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -223,3 +223,6 @@ mark_anhunqu: 'https://seer2-resource.yuuinih.com/png/markImage/3271.png'
 mark_shuanghunxuanlv: 'https://seer2-resource.yuuinih.com/png/markImage/3272.png'
 mark_shunliu: 'https://seer2-resource.yuuinih.com/png/markImage/3238.png'
 mark_niliu: 'https://seer2-resource.yuuinih.com/png/markImage/3239.png'
+mark_dianxizengqiang: 'https://seer2-resource.yuuinih.com/png/markImage/3216.png'
+mark_global_leibaotian: 'https://seer2-resource.yuuinih.com/png/markImage/20007.png'
+mark_leishenjuexing: 'https://seer2-resource.yuuinih.com/png/markImage/3213.png'
