--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -9132,7 +9132,7 @@
   effect: []
 - id: skill_shanguangji
   element: Electric
-  category: Special
+  category: Physical
   target: opponent
   power: 60
   rage: 15
@@ -9227,7 +9227,7 @@
   effect:
     - effect_skill_reduce_opponent_spe_1_stage
     - effect_skill_add_mark_opponent_mingzhongxiajiang_15
-- id: skill_jidiantianchong
+- id: skill_jidianqianniao
   element: Electric
   category: Special
   target: opponent
@@ -9251,7 +9251,7 @@
   tags: []
   effect:
     - effect_skill_add_mark_opponent_mabi_20_percent
-- id: skill_modiandian
+- id: skill_morileidian
   element: Electric
   category: Special
   target: opponent
