--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -766,9 +766,9 @@ skill_baiguangren: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_001.mp3'
 skill_leiji: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_001.mp3'
 skill_guangmangwanzhang: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_003.mp3'
 skill_dianshanguang: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_001.mp3'
-skill_jidiantianchong: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_002.mp3'
+skill_jidianqianniao: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_002.mp3'
 skill_shunleitianxian: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_003.mp3'
-skill_modiandian: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_003.mp3'
+skill_morileidian: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_003.mp3'
 skill_leishentianmingshan: 'https://seer2-resource.yuuinih.com/sound/skill/12021.mp3'
 skill_leishenjuexing: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_002.mp3'
 skill_shandiandouqi: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_003.mp3'
